# pink_bench

./: .gitignore  CHANGELOG.md  README.md  environment.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: record_videos.py  run_scenario.py  run_step_by_step.py
pink_bench/: __init__.py  library.py  play_scenario.py  scenario.py  scene.py  utils.py
pink_bench/trajectories/: __init__.py  back_and_forth_trajectory.py  lipm_walking_trajectory.py  swing_foot_trajectory.py  trajectory.py
tests/: __init__.py  conftest.py  test_library.py  test_scenario.py  test_utils.py
