[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pink_bench"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ['version', 'description']
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "clarabel",
    "loop-rate-limiters >=0.1.0",
    "matplotlib",
    "pin-pink >=3.1.0",
    "qpmpc >=2.6.3,<4",
    "qpsolvers >=4.3.1",
    "robot_descriptions >=1.13.0",
]
keywords = ["inverse", "kinematics", "pinocchio"]

[project.urls]
Homepage = "https://stephane-caron.github.io/pink_bench/"
Documentation = "https://stephane-caron.github.io/pink_bench/"
Source = "https://github.com/stephane-caron/pink_bench"
Tracker = "https://github.com/stephane-caron/pink_bench/issues"
Changelog = "https://github.com/stephane-caron/pink_bench/blob/main/CHANGELOG.md"

[tool.coverage.run]
source = ["pink_bench"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]
ignore = [
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
pink_bench = { path = ".", editable = true }

[tool.pixi.dependencies]
clarabel = "*"
daqp = "*"
meshcat-python = "*"
meshcat-shapes = ">=0.3.0"
pink = ">=3.1.0"
proxsuite = "*"
python = ">=3.9"

[tool.pixi.feature.examples.dependencies]
ffmpeg = "*"

[tool.pixi.feature.dev.dependencies]
ruff = "*"

[tool.pixi.feature.test.dependencies]
pytest = ">=7.0"
pytest-cov = "*"

[tool.pixi.environments]
default = { solve-group = "default" }
examples = { features = ["examples"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]
format = "ruff format ."
lint = "ruff check ."
scenario = "python examples/run_scenario.py"

[tool.pixi.feature.test.tasks]
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=pink_bench --cov-report=term-missing"
